--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,3 +15,20 @@ jobs:
           bundler-cache: true
       - run: bundle install
       - run: bundle exec rake test
+  test-prism:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        ruby: ['head']
+        gemfiles:
+          - gemfiles/Gemfile-prism-0.14
+          - gemfiles/Gemfile-prism-0.15
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+          bundler-cache: true
+      - run: bundle install --gemfile ${{ matrix.gemfiles }} --jobs 4 --retry 3
+      - run: bundle exec --gemfile ${{ matrix.gemfiles }} rake test
